Squashed commit of the following:
- Zero dependencies release.